feat(simulation): introduzione formiche esploratrici/follower e ritorno guidato con piste FOOD
- Main:
  - amplia lo scenario predefinito a una mappa 80x100 con celle 24x24;
  - configura più fonti di cibo, cluster di ostacoli e una colonia iniziale
    ad alta densità per verificare la scalabilità della simulazione;
  - aggiorna parametri ACO, raggio dei sensori, rumore, sterzata,
    evaporazione e saturazione del campo feromonico.

- AntRole:
  - introduce i ruoli EXPLORER e FOLLOWER per distinguere le formiche che
    esplorano nuove aree da quelle che sfruttano le piste già note.

- Ant e AntFactory:
  - aggiunge il ruolo immutabile all'entità Ant;
  - assegna casualmente il ruolo alla nascita con una quota del 50% di explorer;
  - migliora la gestione delle collisioni: in caso di ostacolo la formica
    prova più direzioni percorribili invece di limitarsi a un singolo rimbalzo.

- AcoDecisionEngine:
  - rende FOOD l'unico feromone seguito dalle formiche in esplorazione;
  - introduce esplorazione probabilistica distinta per ruolo:
    gli explorer deviano più spesso, i follower privilegiano la pista;
  - riduce il rumore delle follower e mantiene maggiore variabilità per le
    explorer;
  - aggiunge una componente esplorativa ai pesi della roulette per evitare
    lock-in totale sulla prima pista rilevata.

- SimulationEngine:
  - sostituisce la lista interna delle formiche con AntGroup;
  - registra il percorso di uscita di ciascuna formica;
  - elimina i cicli dal percorso personale quando una cella viene rivisitata;
  - al pickup del cibo inizializza un cursore di ritorno sul percorso registrato;
  - guida le formiche con cibo lungo il percorso inverso verso il nido,
    evitando dead-end e cerchi di morte;
  - deposita feromone FOOD durante il ritorno e applica il rinforzo Q/L
    all'arrivo al nido;
  - disabilita il deposito casuale di HOME durante l'esplorazione;
  - pulisce correttamente stato, percorsi e cursori al reset, alla consegna
    e alla rim